add: feature to get a song
