# api/controller/controller.go
@@ -1,6 +1,7 @@
 package controller
 
 import (
+	"fmt"
 	"github.com/gin-gonic/gin"
 	"main/database"
 	"main/models"
@@ -28,7 +29,7 @@ func NewSong(db *database.Song) *Song {
 //	@Success		201			{object}	models.SongDto
 //	@Failure		400			{object}	models.Error
 //	@Failure		500			{object}	models.Error
-//	@Router			/song [POST]
+//	@Router			/songs [POST]
 func (receiver Song) Create(c *gin.Context) {
 	var req models.Song
 	if err := c.ShouldBindJSON(&req); err != nil {
@@ -39,6 +40,30 @@ func (receiver Song) Create(c *gin.Context) {
 	songDto, err := receiver.db.Create(req)
 	if err != nil {
 		c.AbortWithStatusJSON(http.StatusBadRequest, models.Error{Message: err.Error()})
+		return
+	}
+
+	c.JSON(http.StatusOK, songDto)
+}
+
+// GetById godoc
+//
+//	@Description	Get a song by id.
+//	@Summary		Get a song by id
+//	@Accept			json
+//	@Produce		json
+//	@Tags			song
+//	@Param			id	path		string	true	"Song ID"
+//	@Success		200	{object}	models.SongDto
+//	@Failure		400	{object}	models.Error
+//	@Failure		500	{object}	models.Error
+//	@Router			/songs/{id} [GET]
+func (receiver Song) GetById(c *gin.Context) {
+	id := c.Param("id")
+
+	songDto, err := receiver.db.GetById(id)
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusBadRequest, models.Error{Message: fmt.Sprintf("song with id = '%s' was not found", id)})
 		return
 	}
 
